kyy-k8s-config/src/app/frontend/fe-tiku-wap/fe-tiku-wap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:

  labels:
    app: fe-tiku-wap
  name: fe-tiku-wap
spec:
  rules:
    - host: '*.kaoyaya.com'
      http:
        paths:
          - backend:
              serviceName: fe-tiku-wap
              servicePort: 80
            path: /tiku/wap/
    - http:
        paths:
          - backend:
              serviceName: fe-tiku-wap
              servicePort: 80
            path: /tiku/wap/
